--- a/EDA_2020.ipynb
+++ b/EDA_2020.ipynb
@@ -13,6 +13,36 @@
     "from us import states\n",
     "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "353"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('2020_President_MA.csv')\n",
+    "\n",
+    "# How many city/town are in MA?\n",
+    "len(df['City/Town'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
